--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -107,8 +107,9 @@
     
 <!-- 3D Effect -->
     <integer name="effect_3d_z_scale">80</integer>
-    <integer name="effect_3d_cam_distance">50</integer>
-    <integer name="effect_3d_cam_position">10</integer>
+    <integer name="effect_3d_cam_rotation">50</integer>
+    <integer name="effect_3d_cam_position">6</integer>
+    <integer name="effect_3d_cam_fov">45</integer>
     <integer name="effect_3d_sensor_reset_acceleration">20</integer>
     <integer name="effect_3d_shader">0</integer>
     <integer name="effect_3d_barrel_level">50</integer>
