--- a/res/xml/preferences_3d_effect.xml
+++ b/res/xml/preferences_3d_effect.xml
@@ -36,9 +36,9 @@
     <com.cyanogenmod.trebuchet.preference.SeekBarDialogPreference android:key="ui_3d_cam_position"
         android:title="@string/preferences_interface_3d_cam_position_title"
         android:summary="@string/preferences_interface_3d_cam_position_summary"
-        launcher:min="1"
-        launcher:max="11"
-        launcher:suffix="cm"
+        launcher:min="10"
+        launcher:max="110"
+        launcher:suffix="mm"
         android:defaultValue="@integer/effect_3d_cam_position" />
     
     
